Fixes for issues with landscape view on mobile (TODO: Fix toolbar gap)

--- a/src/theme/MobileLayout.module.css
+++ b/src/theme/MobileLayout.module.css
@@ -4,14 +4,17 @@
     /* TODO: how to prevent JetBrains from flagging the var when colour is defined in Mantine theme*/
     --mantine-color-soil-9: #844f29;}
 
-footer, navbar {background-color:transparent !important}
+navbar {background-color:transparent !important}
+
+footer {background-color:transparent !important}
 
 header {background-color:#39ACCE !important}
 
 .footer_icon {
-margin-top: -0.5rem; /*TODO: fix in componment, shifted to avoid shadow clipping in footer */
+/*margin-top: -0.5rem; !*TODO: fix in componment, shifted to avoid shadow clipping in footer *!*/
 width: auto;
 height: 80%;
+vertical-align: middle;
 filter: drop-shadow(0px 5px 4px rgba(0, 0, 0, 0.2)) }
 
 .mobile_toolbar{
